[gd_scene load_steps=16 format=2]

[ext_resource path="res://entities/Player.gd" type="Script" id=1]
[ext_resource path="res://entitysheet.png" type="Texture" id=2]
[ext_resource path="res://entities/CameraController.gd" type="Script" id=3]
[ext_resource path="res://entities/light_mask.png" type="Texture" id=4]
[ext_resource path="res://Silver.ttf" type="DynamicFontData" id=5]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 9 ) ],
"loop": true,
"name": "flying",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "standing",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 6.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 6.5 )

[sub_resource type="DynamicFont" id=12]
size = 26
extra_spacing_top = -3
extra_spacing_bottom = -2
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:shape:extents")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, 6.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 3.5 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "carrying"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:shape:extents")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, 12.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 8.5 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="PickupLocation" type="Position2D" parent="."]
position = Vector2( 0, 17 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
color = Color( 1, 1, 1, 0.133333 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 2 )
frames = SubResource( 5 )
animation = "flying"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 1 )

[node name="PickupArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2( 0, 17.5 )
shape = SubResource( 2 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 10

[node name="PickupLabel" type="Label" parent="Node2D"]
unique_name_in_owner = true
margin_left = -13.0
margin_top = -20.0
margin_right = 72.0
margin_bottom = 5.0
rect_scale = Vector2( 0.34, 0.34 )
custom_fonts/font = SubResource( 12 )
text = "Z to pickup!"
align = 1
valign = 1
uppercase = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
editor_draw_drag_margin = true
script = ExtResource( 3 )

[node name="CollisionAnimator" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 10 )
anims/carrying = SubResource( 11 )
